--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
