--- a/user-service/package.json
+++ b/user-service/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "prisma": "^6.12.0"
