--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,23 @@ services:
     environment:
       - KAFKA_BROKER=kafka:9092
       - DATABASE_URL=postgresql://postgres:7362170Mm.@postgres:5432/social_app_like_db
+      
+  api-gateway:
+    build: .
+    command: ["api-gateway"]
+    ports:
+      - "8080:8080"
+    volumes:
+      - .:/app
+    working_dir: /app
+    depends_on:
+      - auth-service
+      - user-service
+      - follow-service
+      - tweet-service
+      - like-service
+    environment:
+      - NODE_ENV=development
 
 volumes:
   pgdata:
