--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "build": "turbo run build"
   },
   "dependencies": {
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "morgan": "^1.10.1"
   }
 }
